<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微诊</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="press_again_backrun">再按一次返回键退出！</string>
    <string name="select_area">选择地区</string>
    <string name="select_hos">选择医院</string>
    <string name="select_doctor">选择医生</string>
    <string name="search_result">搜索结果</string>
    <string name="Registered_information">挂号信息</string>
    <string name="Hospital_name">东方医院</string>
    <string name="Registered_information_document">挂号预约凭证</string>
    <string name="Serial_number">流水号：00000000</string>
    <string name="Prescription_number">处方号:00000000</string>
    <string name="Patient_name">姓名：戴王炯</string>
    <string name="sex_age">性别：男</string>
    <string name="Outpatient_category">门诊类别：普通门诊</string>
    <string name="Division">科别：神经科</string>
    <string name="Visiting_time">就诊时间：7月1日&#160;&#160;&#160;9:00</string>
    <string name="Doctor_name">医生姓名：王医生</string>
    <string name="The_consultation">诊金：￥20</string>
    <string name="Registration_fee">挂号费:￥5</string>
    <string name="Fee">工本费：￥2</string>
    <string name="Registered_member">挂号员：系统</string>
    <string name="Registration_date">挂号日期：15/6/25</string>
    <string name="Cancel_registration">取消挂号</string>
    <string name="To_pay_for">前往缴费</string>
    <string name="Cancel_the_interrogation">取消问诊</string>
    <string name="Inquiry_into">签到</string>
    <string name="Search_doc_Tips">医生姓名</string>
    <string name="Search_hos_Tips">医院名称</string>
    <string name="select_department">选择科室</string>
    <string name="Reservation">预约挂号</string>
    <string name="test_blood">血液检测</string>
    <string name="Check_state">检查状态：</string>
    <string name="Check_state_result">未检查</string>
    <string name="Check_place">地点：</string>
    <string name="Check_place_result">检查中心105室</string>
    <string name="Cost">费用：</string>
    <string name="Cost_result">￥100</string>
    <string name="Payment_status">缴费状态：</string>
    <string name="Payment_status_result">未缴费</string>
    <string name="Sign_in_state">签到状态：</string>
    <string name="Sign_in_state_result">未签到</string>
    <string name="Inspection_report">缴费/签到/查看检查报告</string>
    <string name="Blood_test_report">血液检查报告</string>
    <string name="Check_type">检查类型:</string>
    <string name="Check_type_result">血液检测</string>
    <string name="Inspection_site">检查部位:</string>
    <string name="Inspection_site_result">血液</string>
    <string name="Check_see">检查所见:</string>
    <string name="Check_see_result">血液各成分正常</string>
    <string name="Other_information1">其他信息1：</string>
    <string name="Other_information1_result">abc</string>
    <string name="Other_information2">其他信息2：</string>
    <string name="Other_information2_result">abc</string>
    <string name="Other_information3">其他信息3：</string>
    <string name="Other_information3_result">abc</string>
    <string name="Payment_details">缴费详情</string>
    <string name="Payment_item">缴费项目：</string>
    <string name="Payment_item_result">血液检查</string>
    <string name="Payment_category">缴费类别：</string>
    <string name="Payment_category_result">检查</string>
    <string name="Amount_of_money">金额：</string>
    <string name="Amount_of_money_result">￥100</string>
    <string name="Medical_insurance">（医保减免￥20）</string>
    <string name="Paid">实付：</string>
    <string name="Paid_result">￥80</string>
    <string name="To_give_up">放弃缴费</string>
    <string name="Pay">缴费</string>
    <string name="name">王某某</string>
    <string name="Basic_information">基本信息</string>
    <string name="History_of_diagnosis_and_treatment">诊疗历史</string>
    <string name="My_social_security_card">我的社保卡</string>
    <string name="My_bank_card">我的银行卡</string>
    <string name="Cancellation">注销</string>
    <string name="Social_security_card_number">社保卡卡号</string>
    <string name="Social_security_card_number_result">12345</string>
    <string name="patient_name">姓名</string>
    <string name="ID_number">身份证号</string>
    <string name="ID_number_result">21112119930421201</string>
    <string name="Add_modify_social_security_card">添加/修改社保卡</string>
    <string name="Payment_method">缴费方式</string>
    <string name="Alipay">支付宝</string>
    <string name="Social_security_card">社保卡</string>
    <string name="UnionPay_payment">银联支付</string>
    <string name="Quick_payment">快捷支付</string>
    <string name="sure">确定</string>
    <string name="register">注册</string>
    <string name="onlanding">暂不登录</string>
    <string name="logo">logo</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="againpassword">确认密码</string>
    <string name="landing">登录</string>
    <string name="remind">请根据实际情况填写</string>
    <string name="sexselect">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="phonenumber">电话号码</string>
    <string name="othersinfor">其他信息</string>
    <drawable name="clr_pressed">#B7E6CE</drawable>
    <drawable name="clr_normal">#20AF65</drawable>
        <string name="age">年龄</string>
    <string name="age_result">21</string>
    <string name="Personal_basic_information">个人基本信息</string>
    <string name="Edit">编辑</string>
    <string name="Testing_CT">CT</string>
    <string name="Testing_CT_Paid_result">200￥</string>
    <string name="Testing_CT_Blood">血液检测</string>
    <string name="Testing_CT_Blood_result">40￥</string>
    <string name="Add_bank_card">添加银行卡</string>
    <string name="Cardholder">持卡人</string>
    <string name="Cardholder_result">王某某</string>
    <string name="Card_number">卡号</string>
    <string name="Card_number_result">1234567890</string>
    <string name="Cell_phone_number">手机号</string>
    <string name="Cell_phone_number_result">0987654321</string>
    <string name="Verification_code">验证码</string>
    <string name="Verification_code_result">A2BC</string>
    <string name="Obtain">获取</string>
    <string name="Submit">提交</string>
    <string name="History_treatment_list">历史诊疗列表</string>
    <string name="History_treatment_list_Date">2015/6/1</string>
    <string name="Bank_of_Communications">交通银行</string>
    <string name="Bank_of_Communications_Tail_number">尾号123银行卡</string>
    <string name="now_ing">当前进行的项目:无</string>

</resources>