<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical" >

    <Button
        android:id="@+id/Bt_register"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/register"
        android:textColor="#20AF65"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Bt_nolanding"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/onlanding"
        android:textColor="#20AF65"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/Iv_logo"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:background="@null"
        android:padding="0dip"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/Et_username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/Iv_logo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/editsharp2"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/Et_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/Et_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/editsharp2"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:hint="@string/password"
        android:singleLine="true" />

    <Button
        android:id="@+id/BT_landing"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/Et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/editsharp1"
        android:text="@string/landing"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>